Lesson3-Assasment-k8s/bonus/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-username-pod
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: db-username-volume
          mountPath: /usr/share/nginx/html
          readOnly: true

---

apiVersion: v1
kind: Pod
metadata:
  name: nginx-password-pod
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: db-password-volume
          mountPath: /usr/share/nginx/html
          readOnly: true

---

apiVersion: v1
kind: Pod
metadata:
  name: nginx-url-pod
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: db-url-volume
          mountPath: /usr/share/nginx/html
          readOnly: true
